# detect-mario

./: .gitignore  README.md  pyproject.toml
src/: app.py  config.py  utils.py
temp/: ToFrame.py  main.ipynb  test.py
